--- a/index.html
+++ b/index.html
@@ -13,11 +13,13 @@
         <button id="kornos-btn">Ir para o site do Kornos</button>
         <div id="contador-vezez" class="contador-vezez">CONTADOR DE VEZES: <span id="vezes-num">0</span></div>
         <img src="besouro.png" alt="Cartaz Besouro" class="besouro-img">
+        <div id="contador-vezez1" class="contador-vezez">CONTADOR DE CONTADOR DE VEZES: <span id="vezes-num1">1</span></div>
     </div>
     
     </div>
     <div id="ads-laterais-left"></div>
     <div id="ads-laterais-right"></div>
+    <button id="nao-clique-btn" class="nao-clique-btn">NÃO CLIQUE</button>
     <script src="script.js"></script>
 </body>
 </html>
